--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 /* cabeçalho */
 .header {
-    background-image: url(img/fundoHeader.svg);
+    background-image: url(../img/fundoHeader.svg);
 }
 
 .header h1 {
@@ -77,7 +77,7 @@
 /* footer */
 
 .footer {
-    background-image: url(img/fundoHeader.svg);
+    background-image: url(../img/fundoHeader.svg);
 }
 
 .footer h1 {
